# panndas

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conf.py  index.rst  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  test.yml
docs/: conf.py  index.rst  reference.rst
src/examples/: markov.py
src/panndas/: __init__.py
src/panndas/data/: __init__.py  text.py  utils.py
src/panndas/nn/: __init__.py  functional.py  math.py  modules.py
src/panndas/nn/modules/: __init__.py  activation.py  batchnorm.py  container.py  dropout.py  linear.py  module.py  transformer.py
tests/: test_functional.py  test_modules.py  test_nn.py
tests/test_modules/: test_activation.py  test_batchnorm.py  test_containers.py  test_dropout.py  test_linear.py  test_loss.py  test_module.py  test_transformer.py
