[tool.poetry]
name = "panndas"
license = "YOLO"
version = "0.0.0"
readme = "README.md"
homepage = "https://github.com/charlesfrye/panndas"
repository = "https://github.com/charlesfrye/panndas"
keywords = ["pandas", "neural networks", "jokes"]
description = "Neural networks in pandas"
authors = ["Charles Frye <cfrye59@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,^3.8"
pandas = "^1.3"

[tool.poetry.dev-dependencies]
torch = "^1.11.0"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
pytest = "^7.1.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
twine = "^3.8.0"
codecov = "^2.1.12"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["panndas", "examples"]

[tool.coverage.report]
show_missing = true
